base/paperclip-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: paperclip
spec:
  to:
    kind: Service
    name: paperclip
  port:
    targetPort: 3100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
